package com.partidoya.platform.shared.interfaces.rest.resources;

public record ErrorResource(String code, String message) {
}
