@startuml
' ACME Shop Platform Starter - class diagram (teaching minimal)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
left to right direction

package "com.acme.shop.platform.catalog" {

  package "interfaces.rest" {
    class CategoriesController <<controller>> {
      -categoryCommandService: CategoryCommandService
      -categoryQueryService: CategoryQueryService
      +createCategory(resource: CreateCategoryResource): ResponseEntity<CategoryResource>
      +getCategoryById(categoryId: Long): ResponseEntity<CategoryResource>
    }

    class ProductsController <<controller>> {
      -productCommandService: ProductCommandService
      -productQueryService: ProductQueryService
      +createProduct(resource: CreateProductResource): ResponseEntity<ProductResource>
      +getProductById(productId: Long): ResponseEntity<ProductResource>
    }
  }

  package "application.commandservices" {
    interface CategoryCommandService <<service>> {
      +handle(command: CreateCategoryCommand): Category
    }
    interface ProductCommandService <<service>> {
      +handle(command: CreateProductCommand): Product
    }
  }

  package "application.queryservices" {
    interface CategoryQueryService <<service>> {
      +handle(query: GetCategoryByIdQuery): Optional<Category>
    }
    interface ProductQueryService <<service>> {
      +handle(query: GetProductByIdQuery): Optional<Product>
    }
  }

  package "application.internal.commandservices" {
    class CategoryCommandServiceImpl <<service>> {
      -categoryRepository: CategoryRepository
    }
    class ProductCommandServiceImpl <<service>> {
      -productRepository: ProductRepository
      -categoryRepository: CategoryRepository
    }
  }

  package "application.internal.queryservices" {
    class CategoryQueryServiceImpl <<service>>
    class ProductQueryServiceImpl <<service>>
  }

  package "domain.model.aggregates" {
    class Category <<aggregate>> {
      -id: CategoryId
      -name: CategoryName
      -description: CategoryDescription
    }

    class Product <<aggregate>> {
      -id: ProductId
      -sku: Sku
      -name: ProductName
      -description: ProductDescription
      -price: Money
      -stock: Stock
      -categoryId: CategoryId
    }
  }

  package "domain.model.valueobjects" {
    class CategoryId <<value object>>
    class CategoryName <<value object>>
    class CategoryDescription <<value object>>
    class ProductId <<value object>>
    class ProductName <<value object>>
    class ProductDescription <<value object>>
    class Sku <<value object>>
    class Money <<value object>>
    class Stock <<value object>>
  }

  package "domain.model.commands" {
    class CreateCategoryCommand <<command>>
    class CreateProductCommand <<command>>
  }

  package "domain.model.queries" {
    class GetCategoryByIdQuery <<query>>
    class GetProductByIdQuery <<query>>
  }

  package "domain.repositories" {
    interface CategoryRepository <<repository>> {
      +findById(id: CategoryId): Optional<Category>
      +save(category: Category): Category
      +existsById(id: CategoryId): boolean
      +existsByName(name: CategoryName): boolean
    }
    interface ProductRepository <<repository>> {
      +findById(id: ProductId): Optional<Product>
      +save(product: Product): Product
      +existsBySku(sku: Sku): boolean
    }
  }

  package "infrastructure.persistence.jpa.adapters" {
    class CategoryRepositoryImpl <<adapter>>
    class ProductRepositoryImpl <<adapter>>
  }

  package "infrastructure.persistence.jpa.assemblers" {
    class CategoryPersistenceAssembler <<assembler>>
    class ProductPersistenceAssembler <<assembler>>
  }

  package "infrastructure.persistence.jpa.entities" {
    class CategoryPersistenceEntity <<jpa entity>>
    class ProductPersistenceEntity <<jpa entity>>
  }

  package "infrastructure.persistence.jpa.embeddables" {
    class MoneyPersistenceEmbeddable <<embeddable>>
  }

  package "infrastructure.persistence.jpa.converters" {
    class SkuPersistenceConverter <<converter>>
  }

  package "infrastructure.persistence.jpa.repositories" {
    interface CategoryPersistenceRepository <<spring data jpa>>
    interface ProductPersistenceRepository <<spring data jpa>>
  }
}

package "com.acme.shop.platform.shared" {

  package "domain.exceptions" {
    class ResourceNotFoundException <<exception>>
    class ResourceConflictException <<exception>>
  }

  package "interfaces.rest" {
    class GlobalExceptionHandler <<exception handler>>
    class ErrorResource <<resource>>
  }

  package "infrastructure.persistence.jpa.entities" {
    abstract class AuditableAbstractPersistenceEntity <<base jpa entity>>
  }
}

' Relationships
CategoriesController --> CategoryCommandService
CategoriesController --> CategoryQueryService
ProductsController --> ProductCommandService
ProductsController --> ProductQueryService

CategoryCommandServiceImpl ..|> CategoryCommandService
CategoryQueryServiceImpl ..|> CategoryQueryService
ProductCommandServiceImpl ..|> ProductCommandService
ProductQueryServiceImpl ..|> ProductQueryService

CategoryCommandServiceImpl --> CategoryRepository
ProductCommandServiceImpl --> ProductRepository
ProductCommandServiceImpl --> CategoryRepository : validates referenced category
CategoryQueryServiceImpl --> CategoryRepository
ProductQueryServiceImpl --> ProductRepository

Product --> CategoryId : references Category by id
Product --> Sku
Product --> Money
Product --> Stock

CategoryRepositoryImpl ..|> CategoryRepository
ProductRepositoryImpl ..|> ProductRepository

CategoryPersistenceEntity --|> AuditableAbstractPersistenceEntity
ProductPersistenceEntity --|> AuditableAbstractPersistenceEntity

@enduml
